--- a/portfolio/templates/post/base.html
+++ b/portfolio/templates/post/base.html
@@ -26,19 +26,21 @@
 </head>
 
 <style>
-  @font-face{
-    src: url("{% static 'assets/fonts/Photograph Signature.ttf ' %}") ;
+  @font-face {
+    src: url("{% static 'assets/fonts/Photograph Signature.ttf ' %}");
     font-family: Signature;
   }
 </style>
 
 <body>
 
+
   <nav class="navbar navbar-inverse bg-dark fixed-top navbar-expand-lg" color-on-scroll="10" id="sectionsNav">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-translate">
-        <a style="font-family: Signature; font-size: 25px" class="navbar-brand" href="{% url 'post:index' %}">Aryaman Arya</a>
+        <a style="font-family: Signature; font-size: 25px" class="navbar-brand" href="{% url 'post:index' %}">Aryaman
+          Arya</a>
         <button type="button" class="ml-auto navbar-toggler" data-toggle="collapse" data-target="#navigation-example2">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
@@ -95,8 +97,46 @@
   {% endblock %}
 
 
-          <!--     *********    SIMPLE BLACK SOCIAL LINE     *********      -->
-          <!-- <div style="background-color:#212121;" class="social-line social-line-big-icons social-line-black">
+  <!--     *********    SIMPLE BLACK SOCIAL LINE     *********      -->
+
+  <div class="social-line social-line-big-icons social-line-black">
+    <div class="container">
+      <div class="row">
+        <!-- <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-twitter"></i>
+                    </a>
+                  </div> -->
+        <div class="col-md-3 col-4">
+          <a href="{{o.facebooklink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
+            <i class="fa fa-facebook-square"></i>
+          </a>
+        </div>
+        <div class="col-md-3 col-4">
+          <a href="{{o.gmaillink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
+            <i class="fa fa-google-plus"></i>
+          </a>
+        </div>
+        <div class="col-md-2 col-4">
+          <a href="{{o.pinterestlink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
+            <i class="fa fa-pinterest"></i>
+          </a>
+        </div>
+        <!-- <div class="col-md-2 col-4">
+                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
+                      <i class="fa fa-youtube-play"></i>
+                    </a>
+                  </div> -->
+        <div class="col-md-3 col-4">
+          <a href="{{o.instagramlink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div style="background-color:#212121;" class="social-line social-line-big-icons social-line-black">
               <div class="container">
                 <div class="row">
                   <div class="col-md-2 col-4">
@@ -132,7 +172,7 @@
                 </div>
               </div>
             </div> -->
-            <!--     *********   SIMPLE BLACK SOCIAL LINE     *********      -->
+  <!--     *********   SIMPLE BLACK SOCIAL LINE     *********      -->
 
   <!--   Core JS Files   -->
   <script src="{% static 'assets/js/lightbox-plus-jquery.min.js' %}" type="text/javascript"></script>
@@ -168,6 +208,8 @@
       materialKit.initSliders();
     });
   </script>
+
+
 </body>
 
 </html>
