--- a/portfolio/templates/post/index.html
+++ b/portfolio/templates/post/index.html
@@ -9,87 +9,85 @@
 {% block content %}
 
 <style>
-    #backimg {
-        background-image: url("{% static 'assets/images/about-me.jpg' %}");
-    }
+  #backimg {
+    background-image: url("{% static 'assets/images/about-me.jpg' %}");
+  }
 
-    #txt {
-        color: white;
-    }
+  #txt {
+    color: white;
+  }
 </style>
 
 <body>
-    <!-- Carousel Card -->
+  <!-- Carousel Card -->
 
-    {% for o in object_list  %}
-
+  {% for o in object_list  %}
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="page-header header-filter"
-                    style="background-image: url('{{o.index_image1.url}}');">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="page-header header-filter"
-                    style="background-image: url('{{o.index_image2.url}}');">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="page-header header-filter"
-                    style="background-image: url('{{o.index_image3.url}}');">
-                </div>
-            </div>
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="page-header header-filter" style="background-image: url('{{o.index_image1.url}}');">
+          </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <i class="material-icons">keyboard_arrow_left</i>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <i class="material-icons">keyboard_arrow_right</i>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+          <div class="page-header header-filter" style="background-image: url('{{o.index_image2.url}}');">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="page-header header-filter" style="background-image: url('{{o.index_image3.url}}');">
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <i class="material-icons">keyboard_arrow_left</i>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <i class="material-icons">keyboard_arrow_right</i>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
+  
 
 
 
 
-    <!------------------------- Section 2------------------------------->
 
-
-
-
-    <div class="cd-section" id="contactus">
-        <div class="contactus-1 section-image" id='backimg'>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-6">
-                        <div class="card card-plain">
-                            <div class="card-header card-header-image">
-                                <img src="{{o.model_image.url}}" alt="No Image">
-                            </div>
-                        </div>
-                    </div>
-                    <div id="txt" class="col-md-6 col-sm-6">
-                        <h1>Meet Aryaman</h1>
-                        <hr color="white"><br>
-                        <p style="font-size:20px;">
-                            {{o.aboutme}}
-                        </p>
-                    </div>
-                </div>
+  <!------------------------- Section 2------------------------------->
+  <div class="cd-section" id="contactus">
+    <div class="contactus-1 section-image" id='backimg'>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+            <div class="card card-plain">
+              <div class="card-header card-header-image">
+                <img src="{{o.model_image.url}}" alt="No Image">
+              </div>
             </div>
+          </div>
+          <div id="txt" class="col-md-6 col-sm-6">
+            <h1>Meet Aryaman</h1>
+            <hr color="white"><br>
+            <p style="font-size:20px;">
+              {{o.aboutme}}
+            </p>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 
-    <!------------------------   FOOTER   ------------------------>
-    <!-- <div class="social-line social-line-white text-center">
+
+
+
+
+  <!------------------------   FOOTER   ------------------------>
+  <!-- <div class="social-line social-line-white text-center">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-12">
@@ -112,43 +110,8 @@
       </div> -->
 
 
-          <div class="social-line social-line-big-icons social-line-black">
-              <div class="container">
-                <div class="row">
-                  <!-- <div class="col-md-2 col-4">
-                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
-                      <i class="fa fa-twitter"></i>
-                    </a>
-                  </div> -->
-                  <div class="col-md-3 col-4">
-                    <a href="{{o.facebooklink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
-                      <i class="fa fa-facebook-square"></i>
-                    </a>
-                  </div>
-                  <div class="col-md-3 col-4">
-                    <a href="{{o.gmaillink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
-                      <i class="fa fa-google-plus"></i>
-                    </a>
-                  </div>
-                  <div class="col-md-2 col-4">
-                    <a href="{{o.pinterestlink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
-                      <i class="fa fa-pinterest"></i>
-                    </a>
-                  </div>
-                  <!-- <div class="col-md-2 col-4">
-                    <a href="#pablo" class="btn btn-link btn-just-icon btn-white">
-                      <i class="fa fa-youtube-play"></i>
-                    </a>
-                  </div> -->
-                  <div class="col-md-3 col-4">
-                    <a href="{{o.instagramlink}}" target="_blank" class="btn btn-link btn-just-icon btn-white">
-                      <i class="fa fa-instagram"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-    {% endfor %}
+
+  {% endfor %}
 </body>
 
 {% endblock %}
